@@ -10,6 +10,8 @@ v7.4.2:
    UTF-8 encoding and removed all Unicode escape sequences (e.g. \u00c4)
    - creation or update of translation files is much easier now (see I18N.txt)
  - fixed encoding problems in dutch translation
+ - update to JFreeChart 1.5.0, does not need the JCommon library anymore
+ - added official JFreeChart-FX 1.0.0 library, custom patch not needed anymore
  ExerciseViewer changes:
  - GarminFitParser: bugfix for handling of missing sample data,
    e.g. temperature, heartrate, speed
